<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center">

	<!-- Big TextView for Time -->
	<TextView
	 		android:id="@+id/output"
	 		android:layout_width="fill_parent"
	 		android:layout_height="45sp"
	    	android:textSize="35sp" 
	 		android:gravity="center"
	 		android:text="" />

	<LinearLayout
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:gravity="center">
	<ImageButton android:id="@+id/audio_recorder_start_button"
		android:contentDescription="@string/audio_recorder_start_button_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/record_button"/>
	<ImageButton android:id="@+id/audio_recorder_stop_button"
		android:contentDescription="@string/audio_recorder_stop_button_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/stop_button"/>
	<ImageButton android:id="@+id/audio_recorder_play_button"
		android:contentDescription="@string/audio_recorder_play_button_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/play_button"/>
	</LinearLayout>
	<LinearLayout
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:gravity="center">
	<Button android:id="@+id/audio_recorder_save_button"
		android:text="@string/audio_recorder_save_button_label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"/>
	<Button android:id="@+id/audio_recorder_discard_button"
		android:text="@string/audio_recorder_discard_button_label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"/>
	</LinearLayout>
	
</LinearLayout>
